# Axiom

./: .gitignore  CMakeLists.txt
Axiom/: CMakeLists.txt
Axiom/Core/: Application.cpp  Application.h  Entry.h  Window.cpp  Window.h
Editor/: CMakeLists.txt  EditorApplication.cpp  Entry.cpp
Tests/: CMakeLists.txt
